--- a/front/public/css/footer.module.css
+++ b/front/public/css/footer.module.css
@@ -1,7 +1,7 @@
 /* Footer container */
 .footer {
-    background-color: #2C3E50;  /* Fond clair pour un style minimaliste */
-    color: #333;  /* Texte sombre pour une lisibilité optimale */
+    background-color: #2C3E50; 
+    color: #333; 
     padding: 60px 20px;
     font-family: 'Helvetica', sans-serif;
     text-align: center;
@@ -11,56 +11,9 @@
   .container {
     display: flex;
     justify-content: space-between;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
     flex-wrap: wrap;
-  }
-  
-  .left,
-  .middle,
-  .right {
-    flex: 1;
-    min-width: 250px;
-    margin: 10px;
-  }
-  
-  .title {
-    font-size: 24px;
-    font-weight: 600;
-    margin-bottom: 10px;
-    color: #ffffff;  /* Couleur premium mais subtile */
-  }
-  
-  .subtitle {
-    font-size: 18px;
-    font-weight: 500;
-    margin-bottom: 10px;
-    color: #3498db;  /* Couleur bleue discrète pour les sous-titres */
-  }
-  
-  .text {
-    font-size: 14px;
-    line-height: 1.6;
-    color: #ffffff;  /* Texte clair et apaisant */
-    margin-bottom: 10px;
-  }
-  
-  .links {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .links li a {
-    text-decoration: none;
-    color: #3498db;  /* Liens de couleur bleue discrète */
-    font-size: 14px;
-    margin-bottom: 8px;
-    display: block;
-    transition: color 0.3s ease;
-  }
-  
-  .links li a:hover {
-    color: #2980b9;  /* Lien bleu plus foncé au survol */
   }
   
   .bottom {
@@ -69,7 +22,9 @@
   
   .copy {
     font-size: 12px;
-    color: #999;  /* Texte de copyright léger pour ne pas surcharger */
+    color: #999;
+    margin-top: -50px;
+    margin-bottom: -80px;
   }
   
   @media (max-width: 768px) {
