--- a/front/public/css/nav.module.css
+++ b/front/public/css/nav.module.css
@@ -144,6 +144,9 @@
 
 /* Mode mobile */
 @media (max-width: 768px) {
+    .loginButton {
+margin-top: 150px;
+    }
     .navLinks {
         display: none;
         flex-direction: column;
