--- a/front/public/css/VenteMaison.module.css
+++ b/front/public/css/VenteMaison.module.css
@@ -294,3 +294,48 @@
   .partnerLogo:hover {
     opacity: 1;
   }
+
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
+    backdrop-filter: blur(5px); /* Effet de flou */
+    z-index: 999; /* Assure que l'overlay est au-dessus des autres éléments */
+  }
+  
+  .loginMessage {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000; /* Assure que le message est au-dessus de l'overlay */
+    text-align: center;
+    max-width: 400px;
+    width: 90%;
+  }
+  
+  .link {
+    color: #D35400;
+    text-decoration: underline;
+  }
+  
+  .closeButton {
+    margin-top: 10px;
+    padding: 8px 16px;
+    background: #D35400;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .closeButton:hover {
+    background: #E67E22;
+  }
