--- a/front/public/css/Nouveaute.module.css
+++ b/front/public/css/Nouveaute.module.css
@@ -96,6 +96,7 @@
   }
   
   .voirPlus {
+    display: inline-block;
     margin-top: 20px;
     padding: 10px 20px;
     background-color: #2a9d8f;
@@ -105,6 +106,8 @@
     font-size: 14px;
     cursor: pointer;
     transition: background-color 0.2s;
+    text-decoration: none;
+    text-align: center;
   }
   
   .voirPlus:hover {
